--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.18",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
@@ -33,6 +35,11 @@
     "typescript-eslint": "^8.32.1"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "mongodb": "^6.16.0"
   }
 }
