--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.4.0",
+    "geolib": "^3.3.4",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.16.0",
