--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript-eslint": "^8.32.1"
   },
   "dependencies": {
+    "agenda": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
