--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@types/cors": "^2.8.18",
+    "@types/date-fns": "^2.6.3",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.17.17",
@@ -40,6 +41,7 @@
   "dependencies": {
     "agenda": "^5.0.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
